# PodCraft

./: .env.example  .gitignore  .prettierignore  agents.md  architecture-doc.md  eslint.config.mjs  package.json  pnpm-lock.yaml  sprint-plan.md  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.base.ts
apps/server/: drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/server/src/: config.ts  index.ts
apps/server/src/db/: index.ts  schema.ts  seed.ts
apps/server/src/jobs/: queue.ts  worker.test.ts  worker.ts
apps/server/src/lib/: ffprobe.ts  file-hash.test.ts  file-hash.ts  http-range.test.ts  http-range.ts  library-reconciliation.test.ts  library-reconciliation.ts  library-sync-decisions.test.ts  library-sync-decisions.ts  (+3 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
docs/: architecture.md  backlog.md  sprint-1.md  sprint-2.md  sprint-plan.md
scripts/: download-models.sh
services/ml/: .gitignore  package.json  pyproject.toml
services/ml/app/: config.py  main.py  schemas.py
services/ml/app/lib/: audio.py  chunking.py  inference_limits.py  language.py  memory.py
services/ml/app/models/: __init__.py  aligner_model.py  asr_model.py  quality_model.py  tts_model.py
services/ml/app/routers/: align.py  asr.py  quality.py  tts.py
services/ml/tests/: test_align.py  test_audio_integration.py  test_health.py  test_language.py  test_memory.py  test_quality.py  test_settings.py  test_synthesize.py  test_transcribe.py  test_tts_language.py
(+39 files in other folders)
